# DataCreation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DataCreation.sln  README.md
DataCreation/: CMakeLists.txt  DataCreation.cpp  DataCreation.vcxproj  DataCreation.vcxproj.filters  DataExport.cpp  DataFactory.h  FileCreation.h
DataCreation/AssetManagement/Headers/: AssimpLoading_Sample.h  SceneConversion.h
DataCreation/AssetManagement/Source/: SceneConversion.cpp
DataCreation/Assets/ExportedAssets/: MIMATERIAL_0.mat  MIMESH_0.msh
DataCreation/Assets/ExportedAssets/MI/: MESH_0.msh
DataCreation/Core/: CoreUnitTests.cpp
DataCreation/Core/Debugging/Headers/: Declarations.h  Macros.h
DataCreation/Core/Functionality/Headers/: Event.h  Function.h  LockerBase.h  Scheduler.h  Subscription.h  Subscription.h.bak
DataCreation/Core/Functionality/Source/: Scheduler.cpp  Subscription.cpp
DataCreation/Core/Geometric/Headers/: Ellipsoid.h  Ellipsoid2.h  Ellipsoid3.h  Ellipsoid4.h  EllipsoidFunctions.h  GeometryDefs.h  Line.h  Line2.h  Line3.h  Line4.h  LineFunctions.h  Plane.h  Plane2.h  Plane3.h  Plane4.h  PlaneFunctions.h  Transform.h  UtilityFunctions.h
DataCreation/Core/Geometric/Source/: Transform.cpp
DataCreation/Core/Headers/: AllCore.h  AnimationCurve.h  CoreDefs.h  Exception.h  FlagEnum.h  Hash.h  Keyframe.h  ListDefs.h  MapDefs.h  PtrDefs.h  TemplateDefs.h  TimeDefs.h
DataCreation/Core/IO/Headers/: Exception.h  File.h  Folder.h  IODefs.h  IOUtils.h
DataCreation/Core/IO/Source/: File.cpp  Folder.cpp  IOUtils.cpp
DataCreation/Core/Math/Headers/: Axis.h  Basis.h  Color.h  MathDefs.h  MathUtils.h  Matrix.h  Matrix2x2.h  Matrix2x2.h.bak  Matrix3x3.h  Matrix3x3.h.bak  Matrix4x4.h  Matrix4x4.h.bak  MatrixFunctions.h  Quaternion.h  QuaternionFunctions.h  QuaternionFunctions.h.bak  UtilityFunctions.h  UtilityFunctions.h.bak  Vector.h  Vector2.h  Vector3.h  Vector4.h  VectorFunctions.h
DataCreation/Core/Math/Source/: UtilityFunctions.cpp
DataCreation/Core/Math/UnitTests/: MathUnitTests.h  MatrixTests.cpp  MatrixTests.h  VectorTests.cpp  VectorTests.h
DataCreation/Core/Serialization/Headers/: Serialization.h  SerializationDefs.h
DataCreation/Core/Source/: AnimationCurve.cpp  Exception.cpp  Hash.cpp  HashTest.h  Keyframe.cpp
DataCreation/Core/UnitTests/: HashTesting.cpp  HashTesting.h
DataCreation/Data/: DataStructs.h  ListTest.h  PrimaryForeignKeyTest.h  Test.h  Test2.h
DataCreation/Data/CustomData/Headers/: AssetDefs.h
DataCreation/Data/Headers/: AssetData.h  AssetExceptions.h  AssetName.h  AssetType.h  AssetUtils.h  DataUtils.h
DataCreation/Data/Rendering/Headers/: AnimatedMeshData.h  AnimatedModelData.h  AssetDefs.h  MaterialData.h  MeshData.h  ModelData.h  SimpleMeshData.h  SimpleModelData.h  SkeletonAnimationData.h  SkeletonData.h  StaticMeshData.h  StaticModelData.h  TextureData.h  VertexBaseData.h
DataCreation/Data/Rendering/Source/: AnimatedMeshData.cpp  AnimatedModelData.cpp  MaterialData.cpp  MeshData.cpp  ModelData.cpp  SimpleMeshData.cpp  SimpleModelData.cpp  SkeletonAnimationData.cpp  SkeletonData.cpp  StaticMeshData.cpp  StaticModelData.cpp  TextureData.cpp
DataCreation/Data/Resources/ExportedAssets/: Assets.h  CustomAssets.h  MeshAssets.h
DataCreation/Data/SQL/Headers/: SQLExceptions.h  SQLInstance.h
DataCreation/Data/SQL/Source/: SQLInstance.cpp
DataCreation/Data/Source/: AssetUtils.cpp  DataUtils.cpp
DataCreation/DataExport/CustomData/Headers/: DataCreation.h  DataExportDefs.h  DataExportUtils.h
DataCreation/DataExport/CustomData/Source/: DataCreation.cpp  DataExportDefs.cpp  DataExportUtils.cpp
DataCreation/DataExport/Headers/: ExportData.h  ExportException.h
DataCreation/DataExport/Rendering/Headers/: AssimpExtensions.h  MaterialExport.h  MeshExport.h  Model.h  ModelExport.h  SceneConversion.h  SkeletonAnimationExport.h  SkeletonExport.h  Utils.h
DataCreation/DataExport/Rendering/Source/: AssimpExtensions.cpp  MaterialExport.cpp  MeshExport.cpp  Model.cpp  ModelExport.cpp  SceneConversion.cpp  SkeletonAnimationExport.cpp  SkeletonExport.cpp  Utils.cpp
DataCreation/DataExport/SQL/Headers/: SQLDefs.h  SQLInstance.h
DataCreation/DataExport/SQL/Source/: SQLInstance.cpp
DataCreation/DataExport/Source/: ExportData.cpp
DataCreation/DataManagement/Headers/: EnglishWords.txt  FileCreation.h  HashedEnglishWords.txt
DataCreation/DataManagement/IO/Headers/: Folder.h  IODefs.h
DataCreation/DataManagement/IO/Source/: File.cpp  Folder.cpp
DataCreation/DataManagement/Source/: HashTesting.cpp
DataCreation/Dependencies/Libs/SQLite/: sqlite3.lib
DataCreation/Resources/ExportedAssets/: Assets.h  CustomAssets.h  MaterialAssets.h
DataCreation/Resources/ExportedAssets/CustomData/: 1238742485.Mdl  1431655765.Tst  1631375646.Mdl  2681151415.Tst  3273357991.Mdl  3616917144.Tst
DataCreation/Resources/ExportedAssets/Materials/: 4037262318.mat  585105935.mat
DataCreation/Resources/ExportedAssets/Meshes/: 1740916818.msh  3593970672.msh  3908287470.msh  4034640878.msh  4037262318.msh  585105935.msh  590873103.msh  640680463.msh  646447631.msh
DataCreation/Resources/ExportedAssets/Models/: 1740916818.mdl  3593970672.mdl  3908287470.mdl  4034640878.mdl  4037262318.mdl  585105935.mdl  590873103.mdl  640680463.mdl  646447631.mdl
DataCreation/Resources/ExportedAssets/SkeletonAnimations/: 1019174808.sanim  1071957458.sanim  1120015933.sanim  1269051539.sanim  1269140115.sanim  1275704467.sanim  1369896036.sanim  1480548246.sanim  1548148872.sanim  1639724736.sanim  1639725125.sanim  1725914083.sanim  1779047287.sanim  1875516279.sanim  192705045.sanim  2039107099.sanim  2039145499.sanim  2042398747.sanim  2042622491.sanim  2129624072.sanim  2131917832.sanim  2243255267.sanim  2243984392.sanim  2245024739.sanim  2462506994.sanim  2481810569.sanim  2542198770.sanim  2736197089.sanim  2737507809.sanim  2755309342.sanim  2877059601.sanim  2996026449.sanim  3091893559.sanim  3377064693.sanim  3378031349.sanim  3510591376.sanim  3547371850.sanim  3548977482.sanim  (+11 more)
DataCreation/SampleExportFormat/ExportedAssets/: Assets.h
(+29 files in other folders)
